--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "quotes",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 1006 --open",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
