init config quote-card structure, completed exploreList, userList configs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
       "@ui/*": ["src/app/ui"],
       "@seo/*": ["src/app/pages/seo_configs/*"],
       "@utils/*": ["src/app/utils/*"],
-      "@entity/*": ["src/app/entities/*"]
+      "@entity/*": ["src/app/entities/*"],
+      "@factories/*": ["src/app/factories/*"]
     },
     "outDir": "./dist/out-tsc",
     "strict": true,
