--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "paths": {
       "@interfaces/*": ["src/app/interfaces/*"],
       "@services/*": ["src/app/services/*"],
-      "@ui/*": ["src/app/ui"],
+      "@ui/*": ["src/app/ui/*"],
       "@seo/*": ["src/app/pages/seo_configs/*"],
       "@utils/*": ["src/app/utils/*"],
       "@entity/*": ["src/app/entities/*"],
